# databricks-agent-token-budgets

./: .gitignore  Makefile  README.md  databricks.yml  plugin.json
.claude-plugin/: README.md  (+1 more)
app/: api.py  app.yml  deps.py  main.py  pyproject.toml  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 001_initial_schema.py
app/core/: auth.py  budget.py  cache.py  config.py  db.py  evaluator.py  models.py  pricing.py  usage.py  warnings.py
app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/frontend/src/: main.tsx  routeTree.gen.ts
app/frontend/src/components/apx/: mode-toggle.tsx  theme-provider.tsx
app/frontend/src/components/ui/: badge.tsx  button.tsx  command.tsx  popover.tsx  select.tsx  tabs.tsx
app/frontend/src/lib/: api.ts  auth.tsx
app/frontend/src/routes/: __root.tsx  index.tsx  my-usage.tsx  overview.tsx
app/routers/: audit.py  budgets.py  me.py  my_usage.py  overview.py  sessions.py  users.py  warnings.py
app/schemas/: audit.py  auth.py  budgets.py  my_usage.py  overview.py  sessions.py  users.py  warnings.py
app/setup/: init_schema.py  validate_access.py
app/tests/: conftest.py
app/tests/integration/: test_db.py  test_validate_access.py
app/tests/unit/: test_api.py  test_auth.py  test_budget.py  test_config.py  test_deps.py  test_evaluator.py  test_pricing.py  test_router_audit.py  test_router_budgets.py  test_router_me.py  test_router_my_usage.py  test_router_overview.py  test_router_sessions.py  test_router_users.py  test_router_warnings.py  test_usage.py  test_warnings.py
(+31 files in other folders)
